<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">

    <EditText
        android:id="@+id/etPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/hint_create_post"
        android:inputType="text" />

    <Button
        android:id="@+id/btnCreatePost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_create"/>

    <EditText
        android:id="@+id/etSearchPosts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_search_posts"
        android:autofillHints=""
        android:inputType="text"/>

    <Button
        android:id="@+id/btnSearchPosts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_search"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerPosts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>