<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/btnUsers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/powder_blue"
        android:text="@string/btn_users"
        android:textColor="@color/white"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btnFriends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/powder_blue"
        android:text="@string/btn_friends"
        android:textColor="@color/white"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btnPosts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/powder_blue"
        android:text="@string/btn_posts"
        android:textColor="@color/white"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btnChats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/powder_blue"
        android:text="@string/btn_chats"
        android:textColor="@color/white"
        android:textSize="16sp"/>
</LinearLayout>