<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/powder_blue"
        android:hint="@string/hint_username"
        android:autofillHints=""
        android:inputType="text"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/powder_blue"
        android:hint="@string/hint_email"
        android:autofillHints=""
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/etDateOfBirth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/powder_blue"
        android:hint="@string/hint_date_of_birth"
        android:autofillHints=""
        android:inputType="date"
        android:focusable="false"
        android:clickable="true"/>

    <EditText
        android:id="@+id/etBio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:backgroundTint="@color/powder_blue"
        android:hint="@string/hint_bio"
        android:autofillHints=""
        android:inputType="text"/>

    <Button
        android:id="@+id/btnCreateUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/prusian_blue"
        android:text="@string/btn_create_user"
        android:textColor="@color/white"
        android:textSize="16sp"/>

    <ListView
        android:id="@+id/listUsers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/powder_blue"
        android:dividerHeight="1dp"/>
</LinearLayout>